--- a/styles/layout.css
+++ b/styles/layout.css
@@ -25,6 +25,7 @@ footer ul {
 }
 footer .social-list {
   font-size: 1rem;
+  padding-right: 1rem;
 }
 .feature-img {
   height: 22.5rem;
